MAJ fin de la deuxième séance.

--- a/Seance02/seance.ipynb
+++ b/Seance02/seance.ipynb
@@ -310,7 +310,7 @@
        "</pre>\n"
       ],
       "text/plain": [
-       "<rich.jupyter.JupyterRenderable at 0x7f73cedbd5b0>"
+       "<rich.jupyter.JupyterRenderable at 0x7fe48071bd30>"
       ]
      },
      "metadata": {},
@@ -344,7 +344,7 @@
        "</pre>\n"
       ],
       "text/plain": [
-       "<rich.jupyter.JupyterRenderable at 0x7f73ceb61d30>"
+       "<rich.jupyter.JupyterRenderable at 0x7fe4805aaa30>"
       ]
      },
      "metadata": {},
@@ -448,7 +448,7 @@
        "</pre>\n"
       ],
       "text/plain": [
-       "<rich.jupyter.JupyterRenderable at 0x7f73cf2215b0>"
+       "<rich.jupyter.JupyterRenderable at 0x7fe48074adf0>"
       ]
      },
      "metadata": {},
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +599,7 @@
        "</pre>\n"
       ],
       "text/plain": [
-       "<rich.jupyter.JupyterRenderable at 0x7f73cedbd5b0>"
+       "<rich.jupyter.JupyterRenderable at 0x7fe48074ae80>"
       ]
      },
      "metadata": {},
@@ -623,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -641,9 +641,7 @@
     "    deja_visites = list()\n",
     "    a_visites = [depart]\n",
     "    while a_visites:\n",
-    "        time.sleep(0.5)\n",
     "        sommet_courant = a_visites.pop()\n",
-    "        print(f\"{sommet_courant=}\")\n",
     "        if sommet_courant == arrivee:\n",
     "            return True\n",
     "        if sommet_courant in deja_visites:\n",
@@ -658,55 +656,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #808000\">sommet_courant</span>=<span style=\"color: #008000\">'A'</span>\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "<rich.jupyter.JupyterRenderable at 0x7f73ceafbca0>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #808000\">sommet_courant</span>=<span style=\"color: #008000\">'C'</span>\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "<rich.jupyter.JupyterRenderable at 0x7f73ceafb0a0>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #808000\">sommet_courant</span>=<span style=\"color: #008000\">'D'</span>\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "<rich.jupyter.JupyterRenderable at 0x7f73ceafb640>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "data": {
       "text/plain": [
        "True"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -718,42 +677,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #808000\">sommet_courant</span>=<span style=\"color: #008000\">'A'</span>\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "<rich.jupyter.JupyterRenderable at 0x7f73ceb54580>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #808000\">sommet_courant</span>=<span style=\"color: #008000\">'B'</span>\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "<rich.jupyter.JupyterRenderable at 0x7f73cedbd5b0>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "data": {
       "text/plain": [
        "False"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -765,133 +698,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #808000\">sommet_courant</span>=<span style=\"font-weight: bold\">{</span><span style=\"color: #008000\">'Berger'</span>: <span style=\"color: #008000\">'Gauche'</span>, <span style=\"color: #008000\">'Loup'</span>: <span style=\"color: #008000\">'Gauche'</span>, <span style=\"color: #008000\">'Mouton'</span>: <span style=\"color: #008000\">'Gauche'</span>, <span style=\"color: #008000\">'Chou'</span>: <span style=\"color: #008000\">'Gauche'</span><span style=\"font-weight: bold\">}</span>\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "<rich.jupyter.JupyterRenderable at 0x7f73ceb54820>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #808000\">sommet_courant</span>=<span style=\"font-weight: bold\">{</span><span style=\"color: #008000\">'Berger'</span>: <span style=\"color: #008000\">'Droite'</span>, <span style=\"color: #008000\">'Loup'</span>: <span style=\"color: #008000\">'Gauche'</span>, <span style=\"color: #008000\">'Mouton'</span>: <span style=\"color: #008000\">'Droite'</span>, <span style=\"color: #008000\">'Chou'</span>: <span style=\"color: #008000\">'Gauche'</span><span style=\"font-weight: bold\">}</span>\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "<rich.jupyter.JupyterRenderable at 0x7f73ceb10280>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #808000\">sommet_courant</span>=<span style=\"font-weight: bold\">{</span><span style=\"color: #008000\">'Berger'</span>: <span style=\"color: #008000\">'Gauche'</span>, <span style=\"color: #008000\">'Loup'</span>: <span style=\"color: #008000\">'Gauche'</span>, <span style=\"color: #008000\">'Mouton'</span>: <span style=\"color: #008000\">'Droite'</span>, <span style=\"color: #008000\">'Chou'</span>: <span style=\"color: #008000\">'Gauche'</span><span style=\"font-weight: bold\">}</span>\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "<rich.jupyter.JupyterRenderable at 0x7f73ceb54160>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #808000\">sommet_courant</span>=<span style=\"font-weight: bold\">{</span><span style=\"color: #008000\">'Berger'</span>: <span style=\"color: #008000\">'Droite'</span>, <span style=\"color: #008000\">'Loup'</span>: <span style=\"color: #008000\">'Droite'</span>, <span style=\"color: #008000\">'Mouton'</span>: <span style=\"color: #008000\">'Droite'</span>, <span style=\"color: #008000\">'Chou'</span>: <span style=\"color: #008000\">'Gauche'</span><span style=\"font-weight: bold\">}</span>\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "<rich.jupyter.JupyterRenderable at 0x7f73ceb54820>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #808000\">sommet_courant</span>=<span style=\"font-weight: bold\">{</span><span style=\"color: #008000\">'Berger'</span>: <span style=\"color: #008000\">'Gauche'</span>, <span style=\"color: #008000\">'Loup'</span>: <span style=\"color: #008000\">'Droite'</span>, <span style=\"color: #008000\">'Mouton'</span>: <span style=\"color: #008000\">'Gauche'</span>, <span style=\"color: #008000\">'Chou'</span>: <span style=\"color: #008000\">'Gauche'</span><span style=\"font-weight: bold\">}</span>\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "<rich.jupyter.JupyterRenderable at 0x7f73ce82de20>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #808000\">sommet_courant</span>=<span style=\"font-weight: bold\">{</span><span style=\"color: #008000\">'Berger'</span>: <span style=\"color: #008000\">'Droite'</span>, <span style=\"color: #008000\">'Loup'</span>: <span style=\"color: #008000\">'Droite'</span>, <span style=\"color: #008000\">'Mouton'</span>: <span style=\"color: #008000\">'Droite'</span>, <span style=\"color: #008000\">'Chou'</span>: <span style=\"color: #008000\">'Gauche'</span><span style=\"font-weight: bold\">}</span>\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "<rich.jupyter.JupyterRenderable at 0x7f73ceafbbe0>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #808000\">sommet_courant</span>=<span style=\"font-weight: bold\">{</span><span style=\"color: #008000\">'Berger'</span>: <span style=\"color: #008000\">'Droite'</span>, <span style=\"color: #008000\">'Loup'</span>: <span style=\"color: #008000\">'Droite'</span>, <span style=\"color: #008000\">'Mouton'</span>: <span style=\"color: #008000\">'Gauche'</span>, <span style=\"color: #008000\">'Chou'</span>: <span style=\"color: #008000\">'Droite'</span><span style=\"font-weight: bold\">}</span>\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "<rich.jupyter.JupyterRenderable at 0x7f73ce82de20>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #808000\">sommet_courant</span>=<span style=\"font-weight: bold\">{</span><span style=\"color: #008000\">'Berger'</span>: <span style=\"color: #008000\">'Gauche'</span>, <span style=\"color: #008000\">'Loup'</span>: <span style=\"color: #008000\">'Droite'</span>, <span style=\"color: #008000\">'Mouton'</span>: <span style=\"color: #008000\">'Gauche'</span>, <span style=\"color: #008000\">'Chou'</span>: <span style=\"color: #008000\">'Droite'</span><span style=\"font-weight: bold\">}</span>\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "<rich.jupyter.JupyterRenderable at 0x7f73ceafbbe0>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #808000\">sommet_courant</span>=<span style=\"font-weight: bold\">{</span><span style=\"color: #008000\">'Berger'</span>: <span style=\"color: #008000\">'Droite'</span>, <span style=\"color: #008000\">'Loup'</span>: <span style=\"color: #008000\">'Droite'</span>, <span style=\"color: #008000\">'Mouton'</span>: <span style=\"color: #008000\">'Droite'</span>, <span style=\"color: #008000\">'Chou'</span>: <span style=\"color: #008000\">'Droite'</span><span style=\"font-weight: bold\">}</span>\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "<rich.jupyter.JupyterRenderable at 0x7f73ce82de20>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "data": {
       "text/plain": [
        "True"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -909,6 +725,138 @@
     "10min -> 11h20\n",
     "\n",
     "Adapter la fonction `sont_relies` pour pouvoir récupérer un chemin entre les sommets lorsqu'ils sont bien reliés."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def est_absent(sommet_cherche, arretes):\n",
+    "    for sommet_1, sommet_2 in arretes:\n",
+    "        if sommet_1 == sommet_cherche:\n",
+    "            return False\n",
+    "    return True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def remonte_arbre(depart, arrivee, arbre):\n",
+    "    sommets = list()\n",
+    "    noeud_courant = arrivee\n",
+    "    while noeud_courant != depart:\n",
+    "        for sommet1, sommet2 in arbre:\n",
+    "            if sommet1 == noeud_courant:\n",
+    "                sommets.append(noeud_courant)\n",
+    "                noeud_courant = sommet2\n",
+    "\n",
+    "            \n",
+    "    sommets.append(noeud_courant)\n",
+    "    return list(reversed(sommets))\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def trouve_chemin(depart, arrivee, graphe):\n",
+    "    sommets, arretes = graphe\n",
+    "    deja_visites = list()\n",
+    "    a_visites = [depart]\n",
+    "    vu_en_premier_par = [(depart, None)]\n",
+    "    while a_visites:\n",
+    "        sommet_courant = a_visites.pop()\n",
+    "        if sommet_courant == arrivee:\n",
+    "            return remonte_arbre(depart, arrivee, vu_en_premier_par)\n",
+    "        if sommet_courant in deja_visites:\n",
+    "            continue\n",
+    "        else:\n",
+    "            deja_visites.append(sommet_courant)\n",
+    "        for sommet_1, sommet_2 in arretes:\n",
+    "            if sommet_1 == sommet_courant:\n",
+    "                a_visites.append(sommet_2)\n",
+    "                if est_absent(sommet_2, vu_en_premier_par):\n",
+    "                    vu_en_premier_par.append((sommet_2, sommet_courant))\n",
+    "                \n",
+    "    return []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['A', 'C', 'D']"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "exemple_positif = ([\"A\", \"B\", \"C\", \"D\"], [(\"A\", \"B\"), (\"A\", \"C\"), (\"C\", \"D\")])\n",
+    "trouve_chemin(depart=\"A\", arrivee=\"D\", graphe=exemple_positif)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "exemple_negatif = ([\"A\", \"B\", \"C\", \"D\"], [(\"A\", \"B\"), (\"C\", \"D\")])\n",
+    "trouve_chemin(depart=\"A\", arrivee=\"D\", graphe=exemple_negatif)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'Berger': 'Gauche', 'Loup': 'Gauche', 'Mouton': 'Gauche', 'Chou': 'Gauche'},\n",
+       " {'Berger': 'Droite', 'Loup': 'Gauche', 'Mouton': 'Droite', 'Chou': 'Gauche'},\n",
+       " {'Berger': 'Gauche', 'Loup': 'Gauche', 'Mouton': 'Droite', 'Chou': 'Gauche'},\n",
+       " {'Berger': 'Droite', 'Loup': 'Droite', 'Mouton': 'Droite', 'Chou': 'Gauche'},\n",
+       " {'Berger': 'Gauche', 'Loup': 'Droite', 'Mouton': 'Gauche', 'Chou': 'Gauche'},\n",
+       " {'Berger': 'Droite', 'Loup': 'Droite', 'Mouton': 'Gauche', 'Chou': 'Droite'},\n",
+       " {'Berger': 'Gauche', 'Loup': 'Droite', 'Mouton': 'Gauche', 'Chou': 'Droite'},\n",
+       " {'Berger': 'Droite', 'Loup': 'Droite', 'Mouton': 'Droite', 'Chou': 'Droite'}]"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trouve_chemin(depart=depart, arrivee=arrivee, graphe=genere_graphe())"
    ]
   },
   {
@@ -937,9 +885,10 @@
    "pygments_lexer": "ipython3",
    "version": "3.8.3"
   },
-  "toc-autonumbering": false,
-  "toc-showcode": true,
-  "toc-showmarkdowntxt": false
+  "toc-autonumbering": true,
+  "toc-showcode": false,
+  "toc-showmarkdowntxt": false,
+  "toc-showtags": false
  },
  "nbformat": 4,
  "nbformat_minor": 4
