--- a/Seance03/nettoye.ipynb
+++ b/Seance03/nettoye.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
        "<module 'auxiliaire' from '/home/vincent/projets/COURS/SC-2020-2021/Seance03/auxiliaire.py'>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,17 +94,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">typing.Literal<span style=\"font-weight: bold\">[</span><span style=\"color: #008000\">'Berger'</span>, <span style=\"color: #008000\">'Loup'</span>, <span style=\"color: #008000\">'Mouton'</span>, <span style=\"color: #008000\">'Choux'</span><span style=\"font-weight: bold\">]</span>\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">&lt;</span><span style=\"color: #ff00ff; font-weight: bold\">function</span><span style=\"color: #000000\"> NewType.&lt;locals</span><span style=\"font-weight: bold\">&gt;</span>.new_type at <span style=\"color: #000080; font-weight: bold\">0x7f7debc2ddc0</span>&gt;\n",
        "</pre>\n"
       ],
       "text/plain": [
-       "<rich.jupyter.JupyterRenderable at 0x7f7e015f38b0>"
+       "<rich.jupyter.JupyterRenderable at 0x7f7debc0df70>"
       ]
      },
      "metadata": {},
@@ -117,17 +117,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">typing.Literal<span style=\"font-weight: bold\">[</span><span style=\"color: #008000\">'Gauche'</span>, <span style=\"color: #008000\">'Droite'</span><span style=\"font-weight: bold\">]</span>\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">&lt;</span><span style=\"color: #ff00ff; font-weight: bold\">function</span><span style=\"color: #000000\"> NewType.&lt;locals</span><span style=\"font-weight: bold\">&gt;</span>.new_type at <span style=\"color: #000080; font-weight: bold\">0x7f7e00c188b0</span>&gt;\n",
        "</pre>\n"
       ],
       "text/plain": [
-       "<rich.jupyter.JupyterRenderable at 0x7f7e00bbc610>"
+       "<rich.jupyter.JupyterRenderable at 0x7f7debc0da90>"
       ]
      },
      "metadata": {},
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
        "</pre>\n"
       ],
       "text/plain": [
-       "<rich.jupyter.JupyterRenderable at 0x7f7e00bbc790>"
+       "<rich.jupyter.JupyterRenderable at 0x7f7debc0d970>"
       ]
      },
      "metadata": {},
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
        "</pre>\n"
       ],
       "text/plain": [
-       "<rich.jupyter.JupyterRenderable at 0x7f7e015c8b50>"
+       "<rich.jupyter.JupyterRenderable at 0x7f7debc0d970>"
       ]
      },
      "metadata": {},
@@ -516,7 +516,8 @@
    "source": [
     "# Exercice\n",
     "\n",
-    "Coder des tests pour chaque fonction."
+    "Coder des tests pour chaque fonction. (25min -> 11h20)  \n",
+    "**Sauf** `genere_etats` et `genere_graphe` (ce qui est un symptome que ces fonctions devraient être adaptées)"
    ]
   },
   {
