--- a/Seance03/nettoye.ipynb
+++ b/Seance03/nettoye.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
        "<module 'auxiliaire' from '/home/vincent/projets/COURS/SC-2020-2021/Seance03/auxiliaire.py'>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -516,16 +516,10 @@
    "source": [
     "# Exercice\n",
     "\n",
-    "Coder des tests pour chaque fonction. (25min -> 11h20)  \n",
-    "**Sauf** `genere_etats` et `genere_graphe` (ce qui est un symptome que ces fonctions devraient être adaptées)"
+    "- Coder des tests pour chaque fonction. (25min -> 11h20)  \n",
+    "**Sauf** `genere_etats` et `genere_graphe` (ce qui est un symptome que ces fonctions devraient être adaptées)\n",
+    "- Finir la documentation de la librairie. (10min -> 12h)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
