--- a/Seance03/nettoye.ipynb
+++ b/Seance03/nettoye.ipynb
@@ -339,6 +339,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(aux.SOMMETS)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [
@@ -452,7 +461,7 @@
     }
    ],
    "source": [
-    "print(aux.genere_graphe())"
+    "print(aux.GRAPHE)"
    ]
   },
   {
@@ -519,6 +528,16 @@
     "- Coder des tests pour chaque fonction. (25min -> 11h20)  \n",
     "**Sauf** `genere_etats` et `genere_graphe` (ce qui est un symptome que ces fonctions devraient être adaptées)\n",
     "- Finir la documentation de la librairie. (10min -> 12h)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exercice\n",
+    "\n",
+    "- Coder la fonction `genere_etats`\n",
+    "- Compléter les tests sur les fonctions et la documentation `genere_etats` et `genere_graphe`"
    ]
   }
  ],
