--- a/Seance03/nettoye.ipynb
+++ b/Seance03/nettoye.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,29 @@
        "\u001b[0;31mDocstring:\u001b[0m  \n",
        "Description.\n",
        "\n",
-       "Module auxiliaire pour la résolution du problème de traversée.\n"
+       "Module auxiliaire pour la résolution du problème de traversée.\n",
+       "\n",
+       "Variables globales:\n",
+       "- COTES\n",
+       "- PERSONNAGES\n",
+       "- DEPART\n",
+       "- ARRIVEE\n",
+       "- SOMMETS\n",
+       "- GRAPHE\n",
+       "\n",
+       "Fonctions:\n",
+       "- est_valide\n",
+       "- sont_connectes\n",
+       "- genere_etats\n",
+       "- genere_graphe\n",
+       "- sont_relies\n",
+       "- test_sont_relies\n",
+       "- est_absent\n",
+       "- test_est_absent\n",
+       "- remonte_arbre\n",
+       "- test_remonte_arbre\n",
+       "- trouve_chemin\n",
+       "- test_trouve_chemin\n"
       ]
      },
      "metadata": {},
@@ -77,6 +99,262 @@
    ],
    "source": [
     "aux?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on module auxiliaire:\n",
+      "\n",
+      "NAME\n",
+      "    auxiliaire - Description.\n",
+      "\n",
+      "DESCRIPTION\n",
+      "    Module auxiliaire pour la résolution du problème de traversée.\n",
+      "    \n",
+      "    Variables globales:\n",
+      "    - COTES\n",
+      "    - PERSONNAGES\n",
+      "    - DEPART\n",
+      "    - ARRIVEE\n",
+      "    - SOMMETS\n",
+      "    - GRAPHE\n",
+      "    \n",
+      "    Fonctions:\n",
+      "    - est_valide\n",
+      "    - sont_connectes\n",
+      "    - genere_etats\n",
+      "    - genere_graphe\n",
+      "    - sont_relies\n",
+      "    - test_sont_relies\n",
+      "    - est_absent\n",
+      "    - test_est_absent\n",
+      "    - remonte_arbre\n",
+      "    - test_remonte_arbre\n",
+      "    - trouve_chemin\n",
+      "    - test_trouve_chemin\n",
+      "\n",
+      "FUNCTIONS\n",
+      "    est_absent(sommet_cherche: <function NewType.<locals>.new_type at 0x7f3eb0345670>, arretes: List[Arrete]) -> bool\n",
+      "        Décide si le sommet apparaît comme origine d'une des arrêtes.\n",
+      "        \n",
+      "        Exemples:\n",
+      "        >>> est_absent(\n",
+      "        ...     sommet_cherche=\"A\",\n",
+      "        ...     arretes=[(\"A\", \"B\"), (\"B\", \"C\"), (\"C\", \"D\")]\n",
+      "        ... )\n",
+      "        False\n",
+      "        >>> est_absent(\n",
+      "        ...     sommet_cherche=\"A\",\n",
+      "        ...     arretes=[(\"B\", \"C\"), (\"C\", \"D\"), (\"A\", \"B\")]\n",
+      "        ... )\n",
+      "        False\n",
+      "        >>> est_absent(\n",
+      "        ...     sommet_cherche=\"D\",\n",
+      "        ...     arretes=[(\"B\", \"C\"), (\"C\", \"D\"), (\"A\", \"B\")]\n",
+      "        ... )\n",
+      "        True\n",
+      "    \n",
+      "    est_valide(etat: <function NewType.<locals>.new_type at 0x7f3eb0345670>) -> bool\n",
+      "        Fonction implémentant la règle Loup/Mouton Mouton/Chou.\n",
+      "        \n",
+      "        Exemples:\n",
+      "        >>> est_valide({\"Berger\": \"Gauche\", \"Loup\": \"Gauche\", \"Mouton\": \"Gauche\", \"Choux\": \"Gauche\"})\n",
+      "        True\n",
+      "        >>> est_valide({\"Berger\": \"Gauche\", \"Loup\": \"Droite\", \"Mouton\": \"Droite\", \"Choux\": \"Gauche\"})\n",
+      "        False\n",
+      "    \n",
+      "    genere_etats(clefs: List[Literal['Berger', 'Loup', 'Mouton', 'Choux']], valeurs: List[Literal['Gauche', 'Droite']]) -> List[Etat]\n",
+      "        Genere les etats correspondant au problème de la traversée.\n",
+      "        \n",
+      "        Exemples:\n",
+      "        >>> genere_etats(clefs=[\"Berger\", \"Loup\"], valeurs=[\"Gauche\", \"Droite\"])\n",
+      "        [\n",
+      "            {'Berger': 'Gauche', 'Loup': 'Gauche'},\n",
+      "            {'Berger': 'Gauche', 'Loup': 'Droite'},\n",
+      "            {'Berger': 'Droite', 'Loup': 'Gauche'},\n",
+      "            {'Berger': 'Droite', 'Loup': 'Droite'}\n",
+      "        ]\n",
+      "    \n",
+      "    genere_graphe(sommets: List[Etat], contraintes=typing.List[typing.Callable]) -> <function NewType.<locals>.new_type at 0x7f3eb03458b0>\n",
+      "        Renvoie le graphe associé au problème.\n",
+      "        \n",
+      "        Exemple:\n",
+      "        >>> genere_graphe(sommets=[DEPART, ARRIVEE], contraintes=[lambda e1, e2: e1 != e2])\n",
+      "        (\n",
+      "            [\n",
+      "                {'Berger': 'Gauche', 'Loup': 'Gauche', 'Mouton': 'Gauche', 'Choux': 'Gauche'},\n",
+      "                {'Berger': 'Droite', 'Loup': 'Droite', 'Mouton': 'Droite', 'Choux': 'Droite'}\n",
+      "            ],\n",
+      "            [\n",
+      "                (\n",
+      "                    {'Berger': 'Gauche', 'Loup': 'Gauche', 'Mouton': 'Gauche', 'Choux': 'Gauche'},\n",
+      "                    {'Berger': 'Droite', 'Loup': 'Droite', 'Mouton': 'Droite', 'Choux': 'Droite'},\n",
+      "                ),\n",
+      "                (\n",
+      "                    {'Berger': 'Droite', 'Loup': 'Droite', 'Mouton': 'Droite', 'Choux': 'Droite'},\n",
+      "                    {'Berger': 'Gauche', 'Loup': 'Gauche', 'Mouton': 'Gauche', 'Choux': 'Gauche'},\n",
+      "                )\n",
+      "            ]\n",
+      "        )\n",
+      "    \n",
+      "    remonte_arbre(depart: <function NewType.<locals>.new_type at 0x7f3eb0345670>, arrivee: <function NewType.<locals>.new_type at 0x7f3eb0345670>, arbre: List[Arrete]) -> <function NewType.<locals>.new_type at 0x7f3eb03453a0>\n",
+      "        Génère un chemin entre depart et arrivee utilisant les arrêtes de l'arbre.\n",
+      "        \n",
+      "        Exemple:\n",
+      "        >>> remonte_arbre(\n",
+      "        ...     depart=\"D\",\n",
+      "        ...     arrivee=\"A\",\n",
+      "        ...     arbre=[(\"A\", \"B\"), (\"B\", \"C\"), (\"C\", \"D\")]\n",
+      "        ... )\n",
+      "        ['D', 'C', 'B', 'A']\n",
+      "    \n",
+      "    sont_connectes(etat_depart: <function NewType.<locals>.new_type at 0x7f3eb0345670>, etat_arrivee: <function NewType.<locals>.new_type at 0x7f3eb0345670>) -> bool\n",
+      "        Décide si deux états forment une arrête.\n",
+      "        \n",
+      "        Exemples:\n",
+      "        >>> sont_connectes(\n",
+      "        ...     etat_depart={\n",
+      "        ...         \"Berger\": \"Gauche\",\n",
+      "        ...         \"Loup\": \"Gauche\",\n",
+      "        ...         \"Mouton\": \"Droite\",\n",
+      "        ...         \"Choux\": \"Droite\"\n",
+      "        ...     },\n",
+      "        ...     etat_arrivee={\n",
+      "        ...         \"Berger\": \"Droite\",\n",
+      "        ...         \"Loup\": \"Gauche\",\n",
+      "        ...         \"Mouton\": \"Droite\",\n",
+      "        ...         \"Choux\": \"Droite\"\n",
+      "        ...     }\n",
+      "            ... )\n",
+      "        True\n",
+      "        >>> sont_connectes(\n",
+      "        ...     etat_depart={\n",
+      "        ...         \"Berger\": \"Gauche\",\n",
+      "        ...         \"Loup\": \"Gauche\",\n",
+      "        ...         \"Mouton\": \"Droite\",\n",
+      "        ...         \"Choux\": \"Droite\"\n",
+      "        ...     },\n",
+      "        ...     etat_arrivee={\n",
+      "        ...         \"Berger\": \"Droite\",\n",
+      "        ...         \"Loup\": \"Droite\",\n",
+      "        ...         \"Mouton\": \"Droite\",\n",
+      "        ...         \"Choux\": \"Droite\"\n",
+      "        ...     }\n",
+      "        ... )\n",
+      "        True\n",
+      "        >>> sont_connectes(\n",
+      "        ...     etat_depart={\n",
+      "        ...         \"Berger\": \"Gauche\",\n",
+      "        ...         \"Loup\": \"Gauche\",\n",
+      "        ...         \"Mouton\": \"Droite\",\n",
+      "        ...         \"Choux\": \"Droite\"\n",
+      "        ...     },\n",
+      "        ...     etat_arrivee={\n",
+      "        ...         \"Berger\": \"Droite\",\n",
+      "        ...         \"Loup\": \"Gauche\",\n",
+      "        ...         \"Mouton\": \"Gauche\",\n",
+      "        ...         \"Choux\": \"Droite\"\n",
+      "        ...     }\n",
+      "        ... )\n",
+      "        False\n",
+      "    \n",
+      "    sont_relies(depart: <function NewType.<locals>.new_type at 0x7f3eb0345670>, arrivee: <function NewType.<locals>.new_type at 0x7f3eb0345670>, graphe: <function NewType.<locals>.new_type at 0x7f3eb03458b0>) -> bool\n",
+      "        Décide si un chemin du graphe relie les deux états.\n",
+      "        \n",
+      "        Exemples:\n",
+      "        >>> sont_relies(\n",
+      "        ...     depart=\"A\",\n",
+      "        ...     arrivee=\"D\",\n",
+      "        ...     graphe=(\n",
+      "        ...         [\"A\", \"B\", \"C\", \"D\"],\n",
+      "        ...         [(\"A\", \"B\"), (\"A\", \"C\"), (\"C\", \"D\")]\n",
+      "        ...     )\n",
+      "        ... )\n",
+      "        True\n",
+      "        >>> sont_relies(\n",
+      "        ...     depart=\"A\",\n",
+      "        ...     arrivee=\"D\",\n",
+      "        ...     graphe=(\n",
+      "        ...         [\"A\", \"B\", \"C\", \"D\"],\n",
+      "        ...         [(\"A\", \"B\"), (\"C\", \"D\")]\n",
+      "        ...     )\n",
+      "        ... )\n",
+      "        False\n",
+      "    \n",
+      "    test_est_absent()\n",
+      "        Test sur trois cas particuliers la fonction.\n",
+      "    \n",
+      "    test_remonte_arbre() -> bool\n",
+      "        Test sur trois cas particuliers la fonction.\n",
+      "    \n",
+      "    test_sont_relies()\n",
+      "        Test sur deux cas particuliers la fonction.\n",
+      "    \n",
+      "    test_trouve_chemin() -> bool\n",
+      "        Test sur deux cas particuliers la fonction.\n",
+      "    \n",
+      "    trouve_chemin(depart: <function NewType.<locals>.new_type at 0x7f3eb0345670>, arrivee: <function NewType.<locals>.new_type at 0x7f3eb0345670>, graphe: <function NewType.<locals>.new_type at 0x7f3eb03458b0>) -> <function NewType.<locals>.new_type at 0x7f3eb03453a0>\n",
+      "        Renvoie un chemin reliant depart et arrivee à travers le graphe.\n",
+      "        \n",
+      "        Renvoie la liste vide si il n'existe pas de tel chemin.\n",
+      "        \n",
+      "        Exemples:\n",
+      "        >>> trouve_chemin(\n",
+      "        ...     depart=\"A\",\n",
+      "        ...     arrivee=\"D\",\n",
+      "        ...     graphe=(\n",
+      "        ...         [\"A\", \"B\", \"C\", \"D\"],\n",
+      "        ...         [(\"A\", \"B\"), (\"A\", \"C\"), (\"C\", \"D\")]\n",
+      "        ...     )\n",
+      "        ... )\n",
+      "        ['A', 'C', 'D']\n",
+      "        >>> trouve_chemin(\n",
+      "        ...     depart=\"A\",\n",
+      "        ...     arrivee=\"D\",\n",
+      "        ...     graphe=(\n",
+      "        ...         [\"A\", \"B\", \"C\", \"D\"],\n",
+      "        ...         [(\"A\", \"B\"), (\"C\", \"D\")]\n",
+      "        ...     )\n",
+      "        ... )\n",
+      "        []\n",
+      "\n",
+      "DATA\n",
+      "    ARRIVEE = {'Berger': 'Droite', 'Choux': 'Droite', 'Loup': 'Droite', 'M...\n",
+      "    COTES = ['Gauche', 'Droite']\n",
+      "    Callable = typing.Callable\n",
+      "    Cote = typing.Literal['Gauche', 'Droite']\n",
+      "    DEPART = {'Berger': 'Gauche', 'Choux': 'Gauche', 'Loup': 'Gauche', 'Mo...\n",
+      "    Dict = typing.Dict\n",
+      "    GRAPHE = ([{'Berger': 'Gauche', 'Choux': 'Gauche', 'Loup': 'Gauche', '...\n",
+      "    List = typing.List\n",
+      "    Literal = typing.Literal\n",
+      "    PERSONNAGES = ['Berger', 'Loup', 'Mouton', 'Choux']\n",
+      "    Personnage = typing.Literal['Berger', 'Loup', 'Mouton', 'Choux']\n",
+      "    SOMMETS = [{'Berger': 'Gauche', 'Choux': 'Gauche', 'Loup': 'Gauche', '...\n",
+      "    Tuple = typing.Tuple\n",
+      "    __annotations__ = {'COTES': typing.List[typing.Literal['Gauche', 'Droi...\n",
+      "\n",
+      "FILE\n",
+      "    /home/vincent/projets/COURS/SC-2020-2021/Seance03/auxiliaire.py\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(aux)"
    ]
   },
   {
@@ -471,6 +749,15 @@
     "\n",
     "- Coder la fonction `genere_etats`\n",
     "- Compléter les tests sur les fonctions et la documentation `genere_etats` et `genere_graphe`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#  Exercice\n",
+    "\n",
+    "Basculer en privé tout les objets du module qui ne sont pas utilisés dans le notebook."
    ]
   }
  ],
